fixed footer spacing for marketing page

--- a/source/stylesheets/modules/case-study/_case-study.scss
+++ b/source/stylesheets/modules/case-study/_case-study.scss
@@ -564,6 +564,7 @@
 	}
 }
 
-.CustomApp .CaseStudy__form__container--1{
+.CustomApp .CaseStudy__form__container--1,
+.MarketingPage .CaseStudy__form__container--1{
 	margin-top: 90px;
 }
